Prevent the landing page boxes from overlapping and make them stay nicely aligned with each other

--- a/resource/css/finto.css
+++ b/resource/css/finto.css
@@ -744,11 +744,11 @@ hr {
   background-repeat: no-repeat;
 }
 
-.welcome-box,
+/* .welcome-box,
 .right-box,
 #maincontent,
 #vocabulary-list {
   box-sizing: content-box !important;
-}
+} */
 
 
